--- a/update-data.Rmd
+++ b/update-data.Rmd
@@ -206,7 +206,7 @@ resume <- function(bloc) {
     #mutate(Réponse = droplevels(Réponse)) 
   
   NNP <- df %>%
-    mutate(Réponse2 = factor(case_match(str_sub(Réponse,1,2),
+    mutate(Réponse = factor(case_match(str_sub(Réponse,1,2),
              "Ne" ~ "NCP",
              c("0 ","1","2","3") ~ "Négatif",
              c("4","5","6") ~ "Neutre",
