--- a/barometre-esr.Rmd
+++ b/barometre-esr.Rmd
@@ -49,7 +49,7 @@ classoption: "aspectratio=169, french"
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning=FALSE,message = FALSE)
-knitr::opts_chunk$set(cache=TRUE)
+knitr::opts_chunk$set(cache=FALSE)
 options(dplyr.summarise.inform = FALSE)
 knitr::opts_chunk$set(fig.asp = 7/16, fig.retina = 2, out.width = "100%")
 
@@ -151,7 +151,7 @@ __10% des opinions des répondants sont optimistes sur l'amélioration future de
 ::::::
 
 
-## Principaux résultats : Confiance des répondants envers les principales instances et réformes
+## Principaux résultats : Confiance des répondants envers les principales instances
 
 
 :::::: {.cols data-latex=""}
@@ -169,21 +169,50 @@ __18% des opinions des répondants témoignent d'une confiance envers les instan
 ::::::
 
 
+## Principaux résultats : Confiance des répondants envers les principales instances
+
+
 :::::: {.cols data-latex=""}
 ::: {.col data-latex="{0.27\textwidth}"}
 ```{r, echo=FALSE, out.width="100%", fig.width=6,fig.height=5}
-plot_bloc_percent("reformes", pad=45)
+plot_bloc_percent("PCinquietude", pad=35,filldir=-1)
 ```
 :::
 ::: {.col data-latex="{0.03\textwidth}"}
 \ 
 :::
 ::: {.col data-latex="{0.7\textwidth}"}
-__4% des opinions des répondants sur les réformes sont positives, contre 72% qui sont négatives.__ Sont les mieux perçues la loi de programmation de la recherche de 2020 (5% d'opinion positives) et la loi orientation et réussite des étudiants de 2018 (4% d'opinions positives). Sont les plus mal perçues la loi libertés et responsabilités des universités de 2007 (85% d'opinions négatives) et la loi de programmation de la recherche de 2020 (84% d'opinions négatives). La LOLF de 2001 est la réforme la plus méconnue (33% ne la connaissent pas) suivie de la loi pour la liberté de choisir son avenir professionnel de 2018 (23%).
+__18% des opinions des répondants témoignent d'une confiance envers les instances, contre 55% qui rapportent une défiance.__ Sont les mieux perçus les directions de composante (51% de confiance), les instances paritaires locales (39% de confiance) et le CNU (31% de confiance). Sont le plus mal perçus le MESRI (91% de défiance), l'Etat (89% de défiance), l'ANR (77%) et l'Hcéres (75%), suivis de Udice (64%) et des présidences (63%). Les organismes les moins connus sont l'AUREF (34% ne la connaissent pas), France Universités (20%) et UDice (18%).
 :::
 ::::::
 
+:::::: {.cols data-latex=""}
+::: {.col data-latex="{0.27\textwidth}"}
+```{r, echo=FALSE, out.width="100%", fig.width=6,fig.height=5}
+plot_bloc_percent("PCimpact", pad=35,filldir=-1)
+```
+:::
+::: {.col data-latex="{0.03\textwidth}"}
+\ 
+:::
+::: {.col data-latex="{0.7\textwidth}"}
+__18% des opinions des répondants témoignent d'une confiance envers les instances, contre 55% qui rapportent une défiance.__ Sont les mieux perçus les directions de composante (51% de confiance), les instances paritaires locales (39% de confiance) et le CNU (31% de confiance). Sont le plus mal perçus le MESRI (91% de défiance), l'Etat (89% de défiance), l'ANR (77%) et l'Hcéres (75%), suivis de Udice (64%) et des présidences (63%). Les organismes les moins connus sont l'AUREF (34% ne la connaissent pas), France Universités (20%) et UDice (18%).
+:::
+::::::
 
+:::::: {.cols data-latex=""}
+::: {.col data-latex="{0.27\textwidth}"}
+```{r, echo=FALSE, out.width="100%", fig.width=6,fig.height=5}
+plot_bloc_percent("PCeffort", pad=35)
+```
+:::
+::: {.col data-latex="{0.03\textwidth}"}
+\ 
+:::
+::: {.col data-latex="{0.7\textwidth}"}
+__18% des opinions des répondants témoignent d'une confiance envers les instances, contre 55% qui rapportent une défiance.__ Sont les mieux perçus les directions de composante (51% de confiance), les instances paritaires locales (39% de confiance) et le CNU (31% de confiance). Sont le plus mal perçus le MESRI (91% de défiance), l'Etat (89% de défiance), l'ANR (77%) et l'Hcéres (75%), suivis de Udice (64%) et des présidences (63%). Les organismes les moins connus sont l'AUREF (34% ne la connaissent pas), France Universités (20%) et UDice (18%).
+:::
+::::::
 
 
 ```{r end, eval=FALSE}
@@ -274,13 +303,34 @@ plot_bloc("optimisme",conditions.factor)
 plot_bloc_grid("confiance",confiance.factor)
 ```
 
-## Détail : Impact des réformes
+## Détail : Confiance envers les instances
 
-« D'après vous, quel effet ont eu les réformes suivantes sur les conditions d'exercice de vos missions ? »
+« Pour améliorer vos conditions de travail et la qualité de vos missions, quelle confiance accordez-vous personnellement aux instances suivantes ? »
 
-```{r reformes, fig.width=12}
-plot_bloc_grid("reformes",reformes.factor)
+```{r PCinquietude, fig.asp=3/16, out.width="80%", fig.align='center'}
+plot_bloc("PCinquietude",pc.factor,filldir=-1) + theme(legend.position = "right")
 ```
+
+
+:::::: {.cols data-latex=""}
+::: {.col data-latex="{0.48\textwidth}"}
+« Pour améliorer vos conditions de travail et la qualité de vos missions, quelle confiance accordez-vous personnellement aux instances suivantes ? »
+
+```{r PCimpact, fig.asp=3/8}
+plot_bloc("PCimpact",pc.factor,filldir=-1) + theme(legend.position = "none")
+```
+:::
+::: {.col data-latex="{0.04\textwidth}"}
+\ 
+:::
+::: {.col data-latex="{0.48\textwidth}"}
+« Pour améliorer vos conditions de travail et la qualité de vos missions, quelle confiance accordez-vous personnellement aux instances suivantes ? »
+
+```{r PCeffort, fig.asp=3/8}
+  plot_bloc("PCeffort",pc.factor) + theme(legend.position = "none")
+```
+:::
+::::::
 
 
 # Résultat par caractéristiques
@@ -365,108 +415,9 @@ Le score de chaque groupe est calculé comme la moyenne des réponses, en valeur
 
 ## Expressions libres : quelques choses ajoutées aux réponses (I)
 
-84 commentaires ont été laissés par les répondants à la question « Avez-vous quelque chose à ajouter aux réponses que vous avez fournies ? ». Ils sont analysés dans la suite.
+X commentaires ont été laissés par les répondants à la question « Avez-vous quelque chose à ajouter aux réponses que vous avez fournies ? ». Ils sont analysés dans la suite.
 
 \footnotesize
-
-___« Ca craque de partout »___, La majorité des commentaires témoigne de situations difficiles. 
-Beaucoup relatent un attachement au métier (_« J’aime profondément mon métier. Mais ce n’est plus vivable. Je suis physiquement dans le rouge. »_) mais aussi des états de surmenage, voire d'épuisement (_« je travaille soirée et we compris. Je suis épuisée. Je ne pense pas pouvoir continuer ainsi longtemps sans tomber malade. »_), bien souvent collectifs (_« Je suis épuisée. Autour de moi, mes collègues sont épuisés. »_).
-
-Les réformes sont souvent pointées comme source de cet épuisement, en particulier la réforme des IUT et l'épisode COVID (_« La mise en place du BUT en contexte COVID a considérablement épuisé les troupes en IUT. »_)
-
-Reviennent parfois le désespoir (_« Je suis désespérée par ce métier que j’ai pourtant choisi avec passion. »_), ainsi que les notions d'abandon (_« placardisé »_) et d'impasse (_« Je me sens complètement abandonnée par le système actuel de recherche et ne sais pas comment me sortir de cette situation. »_)
-
-
-___« L’économie de fonctionnement paraît être devenue la seule ligne directrice, devant la clarté des formations, la pédagogie et la recherche fondamentale »___. L'austérité budgétaire est une des thématiques qui revient le plus. 
-Plusieurs commentaires témoignent d'une insatisfaction face aux rémunérations (_« Actuellement nos salaires de CR ne nous permettent plus de vivre dignement en région parisienne. »_), pouvant aller jusqu'à donner envie de quitter la profession (_« Quand on exploite les enquêtes sur les diplômés et que qq années après leur diplôme ils ont une meilleure rémunération que vous après près de 30 ans de carrière, ça donne envie de partir. »_).
-
-C'est cependant le manque de moyens pour exercer les missions qui concentre le plus de regrets, avec parfois des abandons disciplinaires (_« Mon domaine de spécialité a été décapité »_), mais surtout l'insuffisance des effectifs pour faire face à la charge de travail (_« De nombreux postes de fonctionnaire ont été gelés »_).
-
-## Expressions libres : quelques choses ajoutées aux réponses (II)
-
-\footnotesize
-
-___« Il est devenu difficile de travailler même lorsque l’on a obtenu des budgets »___. Les entraves administratives forment la critique la plus fréquente. Elles sont perçues comme très chronophage (_« la lourdeur du travail administratif empêche de réaliser correctement les missions de recherche et parfois d’enseignement. »_, et relevant d'une forme de défiance (_« Le temps passé à gérer de l’administratif parce que notre employeur ne nous fait pas confiance et cherche à surveiller toute dépense »_), confinant parfois à l'absurde (_« C’est les 12 travaux d’Astérix en permanence »_. Ces critiques se concentrent sur l'organisation (le _« mille feuille administratif »_), et non sur les personnels administratifs.
-
-
-
-___« Je suis en délégation CNRS cette année, ce qui explique que je suis super contente de ma vie, mais c’est avec un gros biais »___. Fait marquant, les expressions positives sont systématiquement liées à des situations personnelles et exceptionnelles, comme une délégation, une promotion ou une nomination (_« Je viens d’avoir un poste, je pense que cela fausse en partie les résultats. Sinon j’aurais été beaucoup plus pessimiste »_). 
-Ce constat s'étend aussi parfois aux réformes, qui sont perçues comme opposant les intérêts individuels et collectifs (_« Si j’ai précisé que la LPR avait eu un effet plutôt positif, c’est uniquement vu de ma fenêtre, car un CPJ se dessine pour moi. En revanche, je me suis mobilisé contre cette loi en 2020 et j’ai déjà refusé un premier CPJ l’année dernière. Aujourd’hui, il se trouve que je n’ai plus le choix. »_).
-
-___« Peut-on vraiment dire que l’efficacité de la recherche ou de l’enseignement a été améliorée par les diverses réformes effectuées ? »___. Une grande défiance entoure les réformes, qui sont globalement estimées comme contraires aux valeurs universitaires (_« Il me semble que la cause principale du déclin de la recherche et de l’enseignement supérieure réside dans le déséquilibre grandissant (et encouragé) entre le côté compétitif et le côté collaboratif de nos pratiques. »_) et encouragent des méthodes de management contraires aux besoins des missions (_« flexibiliser les EC en les forçant à s’adapter sans cesse à de nouvelles règles, de nouveaux outils, et en faisant une re-ventilation rapide des crédits tous les ans (durée des projets) via les agences de moyens comme l’ANR »_). 
-
-Il en ressort des déceptions (_« J’ai été initialement favorable aux lois Pécresse et Fioraso… jusqu’à constater leurs objectifs et conséquences délétères »_), et un sentiment d'agir contre les intérêts de sa propre profession (_« La destruction du système universitaire et de recherche publiques est possible parce que des collègues y participent activement »_).
-
-
-___« La dégradation de l’ESR n’est qu’un épiphénomène au vu de la catastrophe écologique en cours mais elle résulte du même aveuglement de nos gouvernants »___. Lorsqu'elle est mentionnée, la crise écologique surpasse les craintes propres à l'ESR, et participe à la défiance envers les gouvernants ainsi qu'à un certain découragement (_« comme la planète est fichue, je dois avouer que même en ayant répondu à ce questionnaire, le sort de l’ESR n’est plus du tout ma priorité »_).
-
-
-## Expressions libres : contrôle par analyse automatique IA
-
-Afin de contrôler les analyses précédentes, les outils OpenAI (chatGPT) ont été utilisés 
-pour résumer les expressions libres de façon synthétique. Le résultat suivant est donc hermétique aux biais des auteurs du baromètre.
-
-\footnotesize
-
-Voici les points principaux qui ressortent de ces réponses à l'enquête sur l'enseignement supérieur et la recherche :
-
-1. ___Les conditions de travail___ : Les répondants soulignent les conditions de travail difficiles, notamment en raison de la charge administrative, des changements de règles fréquents et de la surcharge de travail. Ils expriment également leur épuisement et le manque de soutien des collègues et de l'administration.
-
-2. ___La précarité___ : Les répondants mentionnent la précarité des collègues sans poste, le manque d'opportunités d'emploi et la difficulté à obtenir un poste stable. Ils soulignent également les salaires bas et la dégradation de la qualité de l'administration publique.
-
-3. ___Les réformes___ : Les répondants critiquent les réformes du système d'enseignement supérieur et de recherche, les considérant comme des causes de dégradation. Ils mentionnent notamment la privatisation, la bureaucratisation excessive et les politiques de gestion basées sur des critères quantitatifs plutôt que qualitatifs.
-
-
-## Expressions libres : observations sur le baromètre (I)
-
-84 commentaires ont été laissés par les répondants à la question « Avez-vous des observations sur le baromètre lui-même ? ». Ils sont analysés dans la suite.
-
-
-\footnotesize
-
-___« Je pense que pour être efficace, il devrait être simplifié, que l’on puisse le remplir tous les 6 mois facilement, par exemple ».___ La plupart des observations témoignent d'une frustration face à l'enquête, jugée à la fois trop longue et trop courte (_« La question sur les lois est un peu “courte” : il faudrait distinguer la loi de la manière dont elle a été mise en oeuvre. »_, _« Il pourrait être intéressant d’inclure une question sur la perception de l’évolution récente du taux de succès aux appels d’offre de type ANR? »_, _« Le baromètre interroge sur les impressions, le ressenti. Pas sur le pourquoi de ce ressenti. »_, _« où est le baromètre sur la transmission du savoir, sur le rapport et le contact avec les étudiants, la perte de l’esprit de communauté universitaire »_, _« Les premières questions sont difficiles à répondre. Il faudrait entrer un peu plus qualitativement dans les thèmes »_). Les auteurs ont dû trancher sur un équilibre entre longueur et précision, sans prétention de trouver le meilleur équilibre, mais conscient qu'il sera impossible d'être adapté à toutes les demandes.
-
-___« Il me semble qu’il faudrait inclure dans les dernières questions les responsabilités pédagogiques »___. Ces responsabilités, bien que particulièrement lourdes et indispensables, sont plus éloignées des questions institutionnelles que traite la question sur les responsabilités. Cependant, cette modification va être étudiée.
-
-___« Il manque les relations pro avec les pairs, qui aident quand même vraiment au quotidien »___. L'ajout de cette question va être étudié.
-
-___«Proposition d'extension aux expériences de discriminations, souffrance au travail, conditions matérielles, rémunérations », « en posant des questions très pratiques (temps de travail par semaine ou par mois) »___. Des enquêtes dédiées à ces thématiques existent déjà dans certains travaux de recherche et certains établissements (enquêtes temps de travail, bien-être au travail, etc.). C'est pour éviter de faire doublon qu'elles ont été écartées du baromètre.
-
-___« Je comprends bien l’intention du questionnaire, mais il me manque une question sur ce que je pense de l’avenir pour les autres… »___. Cette inquiétude des autres est très fréquente dans les commentaires, mais la vision globale sur l'état de l'ESR doit émerger du nombre de réponses, chacun ne représentant qu'un cas individuel. C'est ce qui a par exemple permis d'identifier que les perceptions positives sont liées à des situations individuelles et exceptionnelles. 
-
-
-## Expressions libres : observations sur le baromètre (I)
-
-\footnotesize
-
-___« Attention svp à l’anonymat »___. Les auteurs sont conscients des limites de l'anonymat, et mettent tout en œuvre pour le préserver au maximum. C'est par exemple la raison pour laquelle les extraits de témoignage ne sont pas reliés aux informations statutaires.
-
-
-___« Rédigé par des enseignants-chercheurs et ça se voit ;) »___. Avant diffusion, le baromètre a été soumis pour commentaire à des collègues de tous statuts, EC comme BIATSS, titulaires comme précaires, permettant de l'adapter à toutes les perspectives. Les auteurs craignent que la diversité de la communauté rende impossible d'avoir des questions parfaitement adaptées à tous les répondants.
-
-___« Il me paraît difficile de mettre dans la même catégorie les enseignants prag et les EC » « Vous commettez une grave erreur sur le niveau d’emploi : mettre ensemble PU/DR d’une part et BIATSS catégorie A d’autre part, ne relève d’aucune réalité »___ Beaucoup d'observations critique la question « Quelle catégorie correspond à votre emploi ? », qui mélange tous les métiers et statuts. Un croisement avec les questions « Quel est votre métier principal ? » et « Quel est votre statut ? » permet de lever les ambiguïtés. Cependant, cette question sera reformulée pour éviter de futures critiques.
-
-___« J’ai accédé à ce baromètre via des listes de diffusion qui discutent des problèmes actuels de l’ESR. Si c’est le cas de tous ceux qui répondent, il y aura forcément un biais »___. Le baromètre a été diffusé par de nombreuses voies, en évitant les listes de diffusion militantes, dans l'espoir de limiter les biais. Les auteurs espèrent progresser dans la représentativité des répondants, notamment en arrivant à mieux toucher les personnels BIATSS et précaires, actuellement sous-représentés.
-
-___« Pas un seul mot sur les étudiants, désolant »___. Le baromètre s'intéresse aux personnels, et fait donc l'impasse sur les usagers, dont les étudiants. 
-
-___« Un peu trop général, il serait intéressant que les questions soient plus systématiquement ouvertes »___. Les questions ouvertes impliquent un travail d'analyse beaucoup plus lourd, que la CPESR n'est pas en mesure de fournir.
-
-___« Le barème aurait pu aussi poser la question de la confiance vis-à-vis des syndicats »___. La question s'est posée lors de l'élaboration du baromètre, mais s'est butée à la difficulté de mettre tous les syndicats dans une seule question malgré leur diversité. Les questions sur les instances paritaires donnent cependant un début de réponse, tout en contournant cette difficulté.
-
-## Expressions libres : observations sur le baromètre (III)
-
-\footnotesize
-
-___« Parmi les réformes, vous auriez pu ajouter celle des IUT en BUT. Cette réforme a eu de douloureuses conséquences sur les équipes et le sens du métier. »___. Cette modification sera étudiée.
-
-___« Peut être rajoutée la possibilité de répondre public prive mixte ».___ Vu le très faible nombre de réponses "privé", cela n'aurait pas changé grand chose, mais cette modification sera étudiée.
-
-___« Les EPST n’apparaissent pas dans les établissements ? (ex : Inria, CNRS…) »___. La liste des établissements est issue d'une donnée ouverte, qui n'inclut pas les EPST. Cette modification sera étudiée.
-
-___« Trop d’acronymes (certains me sont inconnus) et pas de version anglaise… il faut penser à la diversité »___. L'utilisation d'acronymes est à dessein, et se couple avec la possibilité de ne pas répondre ou d'indiquer qu'on ne connaît pas : elle permet de mesurer également le niveau de connaissance de la communauté sur certaines choses en particulier. Une version anglaise serait utile, mais représente sans doute une charge de travail supplémentaire difficile à assumer.
-
-___« Un grand merci de mener cette étude »___. Beaucoup de commentaires sont reconnaissants de l'initiative du baromètre, ce qui peut indiquer un déficit d'attention de l'institution envers ses membres.
 
 La CPESR remercie chaleureusement les participantes et participants à ce baromètre.
 
