--- a/barometre-esr.Rmd
+++ b/barometre-esr.Rmd
@@ -63,7 +63,7 @@ source("barometre-esr.R")
 
 # Présentation de l'enquête et principaux résultats 
 
-## Présentation de l'enquête
+## Présentation de l'enquête (I)
 
 ### Texte d'introduction
 \footnotesize
@@ -73,36 +73,80 @@ Il concerne tous les personnels de l'ESR, tous statuts, secteurs, disciplines, e
 
 Il comporte 5 questions principales et leurs sous-questions, ainsi qu'une dizaine de questions de profil, qui se remplissent en moins de 10 minutes. Les réponses sont anonymes.
 
-### Questions
+### Questions à propos des conditions de travail et de la confiance
 \footnotesize
 
+Guide général : Répondez spontanément en ne considérant que votre cas personnel et à la période la plus récente, y compris si ce n'est pas représentatif d'un périmètre plus large ou d'une période plus longue.
+
+Les réponses sont sur une échelle de 0 à 10, où 0 est très négatif, 5 neutre et 10 très positif.
+
 - __Conditions de travail__ : 
-En ce qui vous concerne personnellement, et à l'heure actuelle, comment estimez-vous les choses suivantes ?
+Dans quelle mesure trouvez-vous satisfaisantes les choses suivantes ? \newline
+0 - Pas du tout satisfaisantes ; 10 - Tout à fait satisfaisantes
 
 - __Evolutions__ :
-En ce qui vous concerne personnellement, comment estimez-vous l'évolution des choses suivantes :
+Comment estimez-vous l'évolution des choses suivantes ? \newline
+0 - Rapide dégradation ; 10 - Rapide amélioration
 
 - __Optimisme__ :
-Concernant l'amélioration dans le futur des choses suivantes, comment estimez-vous être personnellement ?
+Dans quelle mesure êtes-vous optimiste pour l'amélioration futures des choses suivantes ? \newline
+0 - Sans espoir ; 1 - Serein
 
 - __Confiance__ :
-Pour améliorer vos conditions de travail et la qualité de vos missions, quelle confiance accordez-vous personnellement aux instances suivantes ?
+Avez-vous le sentiment d'avoir le soutien des instances suivantes ? \newline
+0 - Pas du tout ; 10 - Totalement \newline
+Si vous estimez ne pas connaître suffisament l'instance, répondez "Ne connais pas".
 
-- __Réformes__ :
-D'après vous, quel effet ont eu les réformes suivantes sur les conditions d'exercice de vos missions ?
+## Présentation de l'enquête (II)
 
-- __Expressions libres__ : 
+### Questions à propos des crises
+\footnotesize
+
+- __Inquiétude__ : 
+D'une manière générale, vous sentez-vous inquiet face aux crises suivantes ? \newline
+0 - Pas du tout ; 10 - Tout à fait \newline
+Crise climatique ; Crise économique ; Crise diplomatique ; Crise politique. \newline
+Si vous estimez qu'une crise n'existe pas, répondez "Pas du tout". \newline
+La crise diplomatique revoit aux questions internationales, aux tensions comme aux guerres. \newline
+
+- __Impact__ : Estimez-vous que ces crises impactent, directement ou indirectement, vos conditions de travail ? \newline
+0 - Pas du tout ; 10 - Tout à fait \newline
+Considérez les impacts de toutes natures, que ce soit sur vos activités, sur votre façon de les  exercer, ou sur le sens que vous leur donnez. \newline
+
+- __Effort__ : Estimez-vous que votre institution fait suffisamment d'effort face aux crises suivantes ? \newline
+0 - Pas du tout ; 10 - Tout à fait \newline
+Considérez globalement tous les efforts, et votre institution locale (administration, université, centre de recherche...).
+
+- __Commentaire sur les crise__ : Si vous le souhaitez, vous pouvez préciser vos réponses.
+
+### Expressions libres
+\footnotesize
+
+- __Commentaires généraux__ : 
 Avez-vous quelque chose à ajouter aux réponses que vous avez fournies ?
-Avez-vous des observations sur le baromètre lui-même ?
+
+- __Commentaires sur le baromètre__ : Avez-vous des observations sur le baromètre lui-même ?
+
+
+## Présentation de l'enquête (III)
+
+### Questions de profil
+\footnotesize
+
+- __Questions socles__ : Pour chacune des questions suivantes, situez-vous sur une échelle de 0 à 10. \newline
+0 - Pas du tout ; 10 - Totalement \newline
+Ces questions visent à situer vos réponses parmi celles de toute la population.
+
+- __Quelques informations sur vous__ : 
+Sexe/genre ; Tranche d'âge ; Ancienneté dans l'ESR ; Statut ; Catégorie ; Métier principal ; Discipline ; Responsabilités ; Secteur ; Etablissement
+
 
 ### Diffusion et nombre de réponses
 \footnotesize
 
-Le baromètre a été ouvert de mars à octobre 2023, en vue de limiter un effet date sur les résultats. Il a été mis en ligne sur le site de la CPESR, diffusé sur les réseaux sociaux, sur des listes de diffusions professionnelles et par The Meta News. 
+Le baromètre a été ouvert de juin à décembre 2024, en vue de limiter un effet date sur les résultats. Il a été mis en ligne sur le site de la CPESR, diffusé sur les réseaux sociaux, sur des listes de diffusions professionnelles et par The Meta News. 
 
 _Nombre de réponses_ : `r nrow(results)` répondants ont rempli au moins la première partie, et `r nrow(results %>% filter(!is.na(submitdate)))` ont finalisé leur réponse. 
-
-
 
 ## Principaux résultats : Opinion des répondants sur leurs conditions de travail
 
@@ -117,7 +161,7 @@ plot_bloc_percent("conditions")
 \ 
 :::
 ::: {.col data-latex="{0.7\textwidth}"}
-__40% des opinions des répondants sur leurs conditions de travail sont positives, contre 42% négatives.__ Sont les mieux perçues les relations professionnelles avec les autres corps de métier (60% d'opinions positives) et les conditions de vie en général (56% d'opinions positives). Sont les plus mal perçues les conditions d'évolution de carrière (61% d'opinions négatives) et les conditions de travail relatives à l'administration (66% d'opinions négatives).
+__43% des opinions des répondants sur leurs conditions de travail sont positives, contre 43% négatives.__ Sont les mieux perçues les relations professionnelles avec le même corps de métier (67% d'opinions positives), les relations professionnelle avec les autres corps de métier (60% d'opinions positives) et les conditions de vie en général (50% d'opinions positives). Sont les plus mal perçues les conditions d'évolution de carrière (56% d'opinions négatives, les conditions de rémunérations (55%) et les conditions de travail relatives à l'administration (67% d'opinions négatives).
 :::
 ::::::
 
@@ -131,7 +175,7 @@ plot_bloc_percent("evolution")
 \ 
 :::
 ::: {.col data-latex="{0.7\textwidth}"}
-__7% des opinions des répondants sur l'évolution de leurs conditions de travail notent une amélioration, contre 61% qui notent une dégradation.__  Les conditions qui s'améliorent le plus sont celles de vie en général (12% d'amélioration) et celles d'évolution de carrière (9% d'amélioration). Les conditions de travail qui se dégradent le plus sont celles relatives à l'administration (76% de dégradation), à la recherche (71%) et à l'enseignement (71%). 
+__10% des opinions des répondants sur l'évolution de leurs conditions de travail notent une amélioration, contre 56% qui notent une dégradation.__  Les conditions qui s'améliorent le plus sont celles des rémunérations (15% d'amélioration), des rélations avec le même corps de métier (14%) et les autres (12%), ainsi que l'équilibre entre vie professionnelle et vie personnelle (12%). Les conditions de travail qui se dégradent le plus sont celles relatives à l'administration (79% de dégradation), à la recherche (69%) et à l'enseignement (63%). 
 :::
 ::::::
 
@@ -146,7 +190,7 @@ plot_bloc_percent("optimisme")
 \ 
 :::
 ::: {.col data-latex="{0.7\textwidth}"}
-__10% des opinions des répondants sont optimistes sur l'amélioration future de leurs conditions de travail, contre 67% qui sont pessimistes.__ Les répondants sont les plus optimistes quant à l'amélioration des relations professionnelles avec les autres corps de métier (18% d'optimistes) et les conditions de vie en général (17% d'optimistes). Les répondants sont les plus pessimistes pour les conditions de travail relatives à l'administration (81% de pessimistes), à la recherche (79%) et à l'enseignement (78%), ainsi qu'aux évolutions de carrière (72%). 
+__10% des opinions des répondants sont optimistes sur l'amélioration future de leurs conditions de travail, contre 67% qui sont pessimistes.__ Les répondants sont les plus optimistes quant à l'amélioration des relations professionnelles avec le même corps de métier (20% d'optimistes) et avec les autres (18%), ainsi que l'équilbre vie professionnelle vie personnelle (15%). Les répondants sont le plus pessimistes pour les conditions de travail relatives à l'administration (86% de pessimistes), à la recherche (81%) et à l'enseignement (80%), ainsi qu'aux rémuunérations (77%) et évolutions de carrière (75%). 
 :::
 ::::::
 
@@ -164,7 +208,7 @@ plot_bloc_percent("confiance", pad=35)
 \ 
 :::
 ::: {.col data-latex="{0.7\textwidth}"}
-__18% des opinions des répondants témoignent d'une confiance envers les instances, contre 55% qui rapportent une défiance.__ Sont les mieux perçus les directions de composante (51% de confiance), les instances paritaires locales (39% de confiance) et le CNU (31% de confiance). Sont le plus mal perçus le MESRI (91% de défiance), l'Etat (89% de défiance), l'ANR (77%) et l'Hcéres (75%), suivis de Udice (64%) et des présidences (63%). Les organismes les moins connus sont l'AUREF (34% ne la connaissent pas), France Universités (20%) et UDice (18%).
+__21% des opinions des répondants témoignent d'un sentiment de soutien de la part des instances, contre 65% qui en rapportent une absence.__ Sont perçus comme les plus soutenants les directions de composante (61% de soutien / 27% de non-soutien), les instances paritaires locales (39%/42%) et le CNU (35%/49%). Les répondant ne sentent pratiquement aucun soutien de la part de l'Etat et du MESRI (tous les deux avec 5%/91%), pas plus que de l'ANR (9%/79%) et du HCéres (11%/77%). Les ONR sont mieux perçues (23%/59%) que France Unversités (9%/77%), l'AUREF (5%/81%) et UDice (5%/82%). 66% des répondants déclarent ne pas connaitre l'AUREF, 47% UDice et 38% France Universités.
 :::
 ::::::
 
@@ -182,7 +226,7 @@ plot_bloc_percent("PCinquietude", pad=35,filldir=-1)
 \ 
 :::
 ::: {.col data-latex="{0.7\textwidth}"}
-__18% des opinions des répondants témoignent d'une confiance envers les instances, contre 55% qui rapportent une défiance.__ Sont les mieux perçus les directions de composante (51% de confiance), les instances paritaires locales (39% de confiance) et le CNU (31% de confiance). Sont le plus mal perçus le MESRI (91% de défiance), l'Etat (89% de défiance), l'ANR (77%) et l'Hcéres (75%), suivis de Udice (64%) et des présidences (63%). Les organismes les moins connus sont l'AUREF (34% ne la connaissent pas), France Universités (20%) et UDice (18%).
+__83% des opinions des répondants témoignent d'une inquiétude face aux crises, contre 9% qui n'en témoignent pas.__ La crise climatique est celle qui inquiète le plus (89% d'inquiétude / 6% sans), puis viennent la crise politique (86%/7%), la crise économique (82%/7%) et la crise diplomatique (71%/13%).
 :::
 ::::::
 
@@ -196,7 +240,7 @@ plot_bloc_percent("PCimpact", pad=35,filldir=-1)
 \ 
 :::
 ::: {.col data-latex="{0.7\textwidth}"}
-__18% des opinions des répondants témoignent d'une confiance envers les instances, contre 55% qui rapportent une défiance.__ Sont les mieux perçus les directions de composante (51% de confiance), les instances paritaires locales (39% de confiance) et le CNU (31% de confiance). Sont le plus mal perçus le MESRI (91% de défiance), l'Etat (89% de défiance), l'ANR (77%) et l'Hcéres (75%), suivis de Udice (64%) et des présidences (63%). Les organismes les moins connus sont l'AUREF (34% ne la connaissent pas), France Universités (20%) et UDice (18%).
+__67% des opinions des répondants témoignent d'un impact des crises sur leur travail, contre 22% qui n'en témoignent pas.__ La crise économique est celle qui impacte le plus (85% d'impact / 9% sans), puis viennent la crise politique (77%/15%), la crise climatique (64%/23%) et la crise diplomatique (41%/41%).
 :::
 ::::::
 
@@ -210,7 +254,7 @@ plot_bloc_percent("PCeffort", pad=35)
 \ 
 :::
 ::: {.col data-latex="{0.7\textwidth}"}
-__18% des opinions des répondants témoignent d'une confiance envers les instances, contre 55% qui rapportent une défiance.__ Sont les mieux perçus les directions de composante (51% de confiance), les instances paritaires locales (39% de confiance) et le CNU (31% de confiance). Sont le plus mal perçus le MESRI (91% de défiance), l'Etat (89% de défiance), l'ANR (77%) et l'Hcéres (75%), suivis de Udice (64%) et des présidences (63%). Les organismes les moins connus sont l'AUREF (34% ne la connaissent pas), France Universités (20%) et UDice (18%).
+__17% des opinions des répondants témoignent d'un effort suffisant de leur institution face aux crises, contre 62% qui n'en témoignent pas.__ La crise climatique est celle qui rassemble le plus d'efforts (27% d'effort / 58% sans), puis viennent la crise économique (10%/70%), la crise diplomatique (14%/59%) et la crise politique (10%/70%).
 :::
 ::::::
 
@@ -226,7 +270,7 @@ knitr::knit_exit()
 \footnotesize
 Les répondants sont représentatifs de la population de l'ESR en ce qui concerne le sexe et l'âge. En revanche, la population universitaire est sur-représentée, et le secteur privé pratiquement absent. 
 
-Les répondants appartiennent à plus de 220 établissements différents, et toutes les universités ont au moins une réponse. Le biais établissement est donc éliminé, mais il n'est pas possible de procéder à des comparaisons entre établissements.
+Les répondants appartiennent à plus de 131 établissements différents, et toutes les universités sont représentées. Le biais établissement est donc probablement faible, mais il n'est pas possible de procéder à des comparaisons entre établissements.
 
 ```{r rep, fig.asp=6/16, fig.width=12}
 cowplot::plot_grid(ncol=2, rel_widths = c(1,1),
@@ -247,7 +291,7 @@ cowplot::plot_grid(ncol=2, rel_widths = c(1,1),
 ## Représentativité (II)
 
 \footnotesize
-Les répondants sont représentatifs de toute la population de l'ESR en ce qui concerne la pyramide des catégories et des responsabilités. En revanche, les enseignants-chercheurs titulaires sont sur-représentés, ainsi que les disciplines LLA-SHS et STEM.
+Les répondants sont représentatifs de toute la population de l'ESR en ce qui concerne la pyramide des catégories et des responsabilités. En revanche, les enseignants-chercheurs titulaires sont sur-représentés, ainsi que les disciplines LLA-SHS et STEM, et les personnels BIATSS de catégorie B et C sont trop sous-représentés pour permettre des comparaisons.
 
 
 ```{r rep2, fig.asp=6/16, fig.width=12}
@@ -267,7 +311,13 @@ cowplot::plot_grid(ncol=2, rel_widths = c(1,1),
 ```
 
 
+## Questions socles
 
+« Pour chacune des questions suivantes, situez-vous sur une échelle de 0 à 10. »
+
+```{r socle}
+plot_bloc("socle",socle.factor)
+```
 
 # Détail des réponses par question
 
